--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": ">=5.6.0",
         "symfony/console": "~2.8|^3",
         "symfony/process": "~2.8|^3",
-        "symfony/filesystem": "~2.8|^3",
+        "symfony/filesystem": "~2.8|^3|^4",
         "psy/psysh": "@stable",
         "civicrm/composer-downloads-plugin": "~2.1|^3"
     },
